name:                ArchiveTools
version:             0.1.0.0
synopsis: Tools for rule based archiving
description: Current status: builds exe that searches for directories containing Ableton Live Sets
homepage:            https://github.com/lambdas-for-life/ArchiveTools#readme
license:             BSD3
license-file:        LICENSE
author:              lambdas-for-life
maintainer:          lambdas.for.life@gmail.com
copyright:           2017 lambdas.for.life@gmail.com
category:            Command Line Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArchiveTools 
                     , ListAbletonContainers
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , text
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable ArchiveTools-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ArchiveTools
                     , optparse-applicative
  default-language:    Haskell2010

test-suite ArchiveTools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ArchiveTools
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambdas-for-life/ArchiveTools
